--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simulador Interactivo</title>
 </head>
 <body>
-    <h1>¡Adivina el número!</h1>
+    <h1>¿Que número estoy pensando?</h1>
     <p><strong>Estoy pensando en un número entre 1 y 10. Intenta adivinarlo!</strong></p>
 
     <script src="index.js"></script>
