--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Interactivo</title>
+    <title>Taller Chelo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>¿Que número estoy pensando?</h1>
-    <p><strong>Estoy pensando en un número entre 1 y 10. Intenta adivinarlo!</strong></p>
-
+    <h1>Turnos en Taller Chelo</h1>
+    <button id="agregar-turno-btn">Agregar Turno</button>
+    <button id="mostrar-turnos-btn">Mostrar Turnos</button>
+    <div id="turnos-container"></div>
     <script src="index.js"></script>
 </body>
 </html>
-
