--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Turnos en Taller Chelo</h1>
+    <h1>Turnos para tu Automovil en Taller Chelo</h1>
     <button id="agregar-turno-btn">Agregar Turno</button>
     <button id="mostrar-turnos-btn">Mostrar Turnos</button>
     <div id="turnos-container"></div>
