Preparacion 3ra entrega

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <button id="agregar-turno-btn">Agregar Turno</button>
     <button id="mostrar-turnos-btn">Mostrar Turnos</button>
     <div id="turnos-container"></div>
+
+    <footer>
+        <div class="footer-content">
+            <h2>Ubicación del Taller Chelo</h2>
+            <p>Dirección: Dr. Adolfo Guemes 850, Salta, Argentina</p>
+            <p>Teléfono: + 3875-.....</p>
+            <p>Email: contacto@tallerchelo.com</p>
+        </div>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
