--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller Chelo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Turnos para tu Automovil en Taller Chelo</h1>
@@ -16,10 +16,11 @@
         <div class="footer-content">
             <h2>Ubicación del Taller Chelo</h2>
             <p>Dirección: Dr. Adolfo Guemes 850, Salta, Argentina</p>
-            <p>Teléfono: + 3875-.....</p>
+            <p>Teléfono: +3875-.....</p>
             <p>Email: contacto@tallerchelo.com</p>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="js/simulador.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
