--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Turnos para tu Automóvil en Taller Chelo</h1>
+    <h1>Turnos para tu Automovil en Taller Chelo</h1>
     <button id="agregar-turno-btn">Agregar Turno</button>
     <button id="mostrar-turnos-btn">Mostrar Turnos</button>
-    <button id="mostrar-datos-btn">Mostrar Datos</button>
     <div id="turnos-container"></div>
-    <div id="datos-container"></div>
+
+    <div id="weather-container"></div> <!-- Contenedor para el clima -->
 
     <footer>
         <div class="footer-content">
